--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-spacy==3.4.0
-https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.4.0/de_core_news_md-3.4.0.tar.gz
-https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.4.0/de_core_news_lg-3.4.0.tar.gz
-https://github.com/explosion/spacy-models/releases/download/de_dep_news_trf-3.4.0/de_dep_news_trf-3.4.0.tar.gz
-streamlit==1.23.1
+spacy
+https://github.com/explosion/spacy-models/releases/tag/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
+streamlit
 tika
